# rust-api

./: .env  Cargo.toml
src/: main.rs  models.rs  routes.rs
