[package]
name = "api"
version = "0.1.0"
authors = ["lichuan <lichuan@mur>"]

[dependencies]
diesel = { version = "1.2.2", features = ["postgres"] }
dotenv = "0.11.0"
r2d2 = "0.8.2"
r2d2-diesel = "1.0.0"
serde = "1.0.70"
serde_derive  = "1.0.70"
serde_json = "1.0.16"

rocket = "0.3.15"
rocket_codegen = "0.3.15"
rocket_contrib = {version = "0.3.15", default-features = false, features = ["json"]}