[package]
name = "api"
version = "0.1.0"
edition = "2018"
authors = ["lichuan <lichuan@mur>"]

[dependencies]
diesel = { version = "1.2.2", features = ["postgres"] }
dotenv = "0.11.0"
r2d2 = "0.8.2"
r2d2-diesel = "1.0.0"
serde = "1.0"
serde_derive  = "1.0"
serde_json = "1.0"

rocket = "0.4"
rocket_codegen = "0.4"
rocket_contrib = {version = "0.4", default-features = false, features = ["json"]}